Adjust color palette

--- a/app.json
+++ b/app.json
@@ -1,17 +1,28 @@
 {
   "expo": {
-    "name": "app",
-    "slug": "app",
+    "name": "YouMeUs",
+    "slug": "youmeus",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "app",
+    "scheme": "youmeus",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.youmeus.app",
+      "infoPlist": {
+        "CFBundleURLTypes": [
+          {
+            "CFBundleURLSchemes": [
+              "com.youmeus.app"
+            ]
+          }
+        ]
+      }
     },
     "android": {
+      "package": "com.youmeus.app",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -36,6 +47,17 @@
           "backgroundColor": "#ffffff",
           "dark": {
             "backgroundColor": "#000000"
+          }
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow YouMeUs to share your live location privately with your partner.",
+          "isAndroidForegroundServiceEnabled": true,
+          "foregroundServiceNotification": {
+            "title": "YouMeUs Live Location",
+            "body": "Sharing your live location with your partner."
           }
         }
       ]
